docs: remove unnecessary anchor tags

--- a/docs/customization/overview.mdx
+++ b/docs/customization/overview.mdx
@@ -11,7 +11,7 @@ description: "Continue can be deeply customized. For example you might:"
 
 Whatever you choose, you'll probably start by editing your Assistant.
 
-## Editing your assistant[​](#editing-your-assistant "Direct link to Editing your assistant")
+## Editing your assistant
 
 You can easily access your assistant configuration from the Continue Chat sidebar. Open the sidebar by pressing `cmd/ctrl` + `L` (VS Code) or `cmd/ctrl` + `J` (JetBrains) and click the Assistant selector above the main chat input. Then, you can hover over an assistant and click the `new window` (hub assistants) or `gear` (local assistants) icon.
 
