--- a/docs/customization/prompts.mdx
+++ b/docs/customization/prompts.mdx
@@ -11,6 +11,6 @@ description: "These are the specialized instructions that shape how models respo
 
 ![Prompt Blocks Overview](/images/customization/images/prompts-blocks-overview-17194d870840576f9a0dde548f2c70ec.png)
 
-## Learn More[​](#learn-more "Direct link to Learn More")
+## Learn More
 
 Prompt blocks have the same syntax as [prompt files](/customization/prompts). The `config.yaml` spec for `prompts` can be found [here](/reference#prompts).
