--- a/docs/customization/rules.mdx
+++ b/docs/customization/rules.mdx
@@ -11,10 +11,10 @@ Think of these as the guardrails for your AI coding assistants:
 
 By implementing rules, you transform the AI from a generic coding assistant into a knowledgeable team member that understands your project's unique requirements and constraints.
 
-### How Rules Work[​](#how-rules-work "Direct link to How Rules Work")
+### How Rules Work
 
 Your assistant detects rule blocks and applies the specified rules while in [Agent](/features/agent/quick-start), [Chat](/features/chat/quick-start), and [Edit](/features/edit/quick-start) modes.
 
-## Learn More[​](#learn-more "Direct link to Learn More")
+## Learn More
 
 Learn more in the [rules deep dive](/customization/rules), and view [`rules`](/reference#rules) in the YAML Reference for more details.
