--- a/docs/customize/custom-providers.mdx
+++ b/docs/customize/custom-providers.mdx
@@ -7,15 +7,15 @@ As an example, say you are working on solving a new GitHub Issue. You type '@Iss
 
 ![Context Items](/images/customize/images/context-provider-example-0c96ff77286fa970b23dddfdc1fa986a.png)
 
-## Context blocks[​](#context-blocks "Direct link to Context blocks")
+## Context blocks
 
 You can add context providers to assistants using [`context` blocks](/hub/blocks/block-types#context). Explore available context blocks in [the hub](https://hub.continue.dev/explore/context).
 
-## Built-in Context Providers[​](#built-in-context-providers "Direct link to Built-in Context Providers")
+## Built-in Context Providers
 
 You can add any built-in context-providers in your config file as shown below:
 
-### `@File`[​](#file "Direct link to file")
+### `@File`
 
 Reference any file in your current workspace.
 
@@ -34,7 +34,7 @@ config.json
 { "contextProviders": [{ "name": "file" }] }
 ```
 
-### `@Code`[​](#code "Direct link to code")
+### `@Code`
 
 Reference specific functions or classes from throughout your project.
 
@@ -53,7 +53,7 @@ config.json
 { "contextProviders": [{ "name": "code" }] }
 ```
 
-### `@Git Diff`[​](#git-diff "Direct link to git-diff")
+### `@Git Diff`
 
 Reference all of the changes you've made to your current branch. This is useful if you want to summarize what you've done or ask for a general review of your work before committing.
 
@@ -72,7 +72,7 @@ config.json
 { "contextProviders": [{ "name": "diff" }] }
 ```
 
-### `@Current File`[​](#current-file "Direct link to current-file")
+### `@Current File`
 
 Reference the currently open file.
 
@@ -91,7 +91,7 @@ config.json
 { "contextProviders": [{ "name": "currentFile" }] }
 ```
 
-### `@Terminal`[​](#terminal "Direct link to terminal")
+### `@Terminal`
 
 Reference the last command you ran in your IDE's terminal and its output.
 
@@ -110,7 +110,7 @@ config.json
 { "contextProviders": [{ "name": "terminal" }] }
 ```
 
-### `@Docs`[​](#docs "Direct link to docs")
+### `@Docs`
 
 Reference the contents from any documentation site.
 
@@ -133,7 +133,7 @@ Note that this will only enable the `@Docs` context provider.
 
 To use it, you need to add a documentation site to your config file. See the [docs](/customization/overview#documentation-context) page for more information.
 
-### `@Open`[​](#open "Direct link to open")
+### `@Open`
 
 Reference the contents of all of your open files. Set `onlyPinned` to `true` to only reference pinned files.
 
@@ -152,7 +152,7 @@ config.json
 { "contextProviders": [{ "name": "open", "params": { "onlyPinned": true } }] }
 ```
 
-### `@Web`[​](#web "Direct link to web")
+### `@Web`
 
 Reference relevant pages from across the web, automatically determined from your input.
 
@@ -173,7 +173,7 @@ config.json
 { "contextProviders": [{ "name": "web", "params": { "n": 5 } }] }
 ```
 
-### `@Codebase`[​](#codebase "Direct link to codebase")
+### `@Codebase`
 
 Reference the most relevant snippets from your codebase.
 
@@ -194,7 +194,7 @@ config.json
 
 Read more about indexing and retrieval [here](/customization/overview#codebase-context).
 
-### `@Folder`[​](#folder "Direct link to folder")
+### `@Folder`
 
 Uses the same retrieval mechanism as `@Codebase`, but only on a single folder.
 
@@ -213,7 +213,7 @@ config.json
 { "contextProviders": [{ "name": "folder" }] }
 ```
 
-### `@Search`[​](#search "Direct link to search")
+### `@Search`
 
 Reference the results of codebase search, just like the results you would get from VS Code search.
 
@@ -234,7 +234,7 @@ config.json
 
 This context provider is powered by [ripgrep](https://github.com/BurntSushi/ripgrep).
 
-### `@Url`[​](#url "Direct link to url")
+### `@Url`
 
 Reference the markdown converted contents of a given URL.
 
@@ -253,7 +253,7 @@ config.json
 { "contextProviders": [{ "name": "url" }] }
 ```
 
-### `@Clipboard`[​](#clipboard "Direct link to clipboard")
+### `@Clipboard`
 
 Reference recent clipboard items
 
@@ -272,7 +272,7 @@ config.json
 { "contextProviders": [{ "name": "clipboard" }] }
 ```
 
-### `@Tree`[​](#tree "Direct link to tree")
+### `@Tree`
 
 Reference the structure of your current workspace.
 
@@ -291,7 +291,7 @@ config.json
 { "contextProviders": [{ "name": "tree" }] }
 ```
 
-### `@Problems`[​](#problems "Direct link to problems")
+### `@Problems`
 
 Get Problems from the current file.
 
@@ -310,7 +310,7 @@ config.json
 { "contextProviders": [{ "name": "problems" }] }
 ```
 
-### `@Debugger`[​](#debugger "Direct link to debugger")
+### `@Debugger`
 
 Reference the contents of the local variables in the debugger. Currently only available in VS Code.
 
@@ -331,7 +331,7 @@ config.json
 
 Uses the top _n_ levels (defaulting to 3) of the call stack for that thread.
 
-### `@Repository Map`[​](#repository-map "Direct link to repository-map")
+### `@Repository Map`
 
 Reference the outline of your codebase. By default, signatures are included along with file in the repo map.
 
@@ -358,7 +358,7 @@ In the submenu that appears, you can select either `Entire codebase`, or specify
 
 This context provider is inpsired by [Aider's repository map](https://aider.chat/2023/10/22/repomap.html).
 
-### `@Operating System`[​](#operating-system "Direct link to operating-system")
+### `@Operating System`
 
 Reference the architecture and platform of your current operating system.
 
@@ -377,7 +377,7 @@ config.json
 { "contextProviders": [{ "name": "os" }] }
 ```
 
-### Model Context Protocol[​](#model-context-protocol "Direct link to Model Context Protocol")
+### Model Context Protocol
 
 The [Model Context Protocol](https://modelcontextprotocol.io/introduction) is a standard proposed by Anthropic to unify prompts, context, and tool use. Continue supports any MCP server with the MCP context provider. Read their [quickstart](https://modelcontextprotocol.io/quickstart) to learn how to set up a local server and then set up your configuration like this:
 
@@ -410,7 +410,7 @@ config.json
 
 You'll then be able to type "@" and see "MCP" in the context providers dropdown.
 
-### `@Issue`[​](#issue "Direct link to issue")
+### `@Issue`
 
 Reference the conversation in a GitHub issue.
 
@@ -441,7 +441,7 @@ config.json
 
 Make sure to include your own [GitHub personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#creating-a-fine-grained-personal-access-token) to avoid being rate-limited.
 
-### `@Database`[​](#database "Direct link to database")
+### `@Database`
 
 Reference table schemas from Sqlite, Postgres, MSSQL, and MySQL databases.
 
@@ -504,7 +504,7 @@ Available connection types:
 - `mysql`
 - `sqlite`
 
-### `@Postgres`[​](#postgres "Direct link to postgres")
+### `@Postgres`
 
 Reference the schema of a table, and some sample rows
 
@@ -544,7 +544,7 @@ By default, the `schema` filter is set to `public`, and the `sampleRows` is set 
 
 [Here is a short demo.](https://github.com/continuedev/continue/pull/859)
 
-### `@Google`[​](#google "Direct link to google")
+### `@Google`
 
 Reference the results of a Google search.
 
@@ -574,7 +574,7 @@ For example, type "@Google python tutorial" if you want to search and discuss wa
 
 Note: You can get an API key for free at [serper.dev](https://serper.dev).
 
-### `@Gitlab Merge Request`[​](#gitlab-merge-request "Direct link to gitlab-merge-request")
+### `@Gitlab Merge Request`
 
 Reference an open MR for this branch on GitLab.
 
@@ -595,7 +595,7 @@ config.json
 
 You will need to create a [personal access token](https://docs.gitlab.com/ee/user/profile/personal_access_tokens.html) with the `read_api` scope.
 
-#### Using Self-Hosted GitLab[​](#using-self-hosted-gitlab "Direct link to Using Self-Hosted GitLab")
+#### Using Self-Hosted GitLab
 
 You can specify the domain to communicate with by setting the `domain` parameter in your configurtion. By default this is set to `gitlab.com`.
 
@@ -621,11 +621,11 @@ config.json
 }
 ```
 
-#### Filtering Comments[​](#filtering-comments "Direct link to Filtering Comments")
+#### Filtering Comments
 
 If you select some code to be edited, you can have the context provider filter out comments for other files. To enable this feature, set `filterComments` to `true`.
 
-### `@Jira`[​](#jira "Direct link to jira")
+### `@Jira`
 
 Reference the conversation in a Jira issue.
 
@@ -653,7 +653,7 @@ config.json
 
 Make sure to include your own [Atlassian API Token](https://id.atlassian.com/manage-profile/security/api-tokens), or use your `email` and `token`, with token set to your password for basic authentication. If you use your own Atlassian API Token, don't configure your email.
 
-#### Jira Datacenter Support[​](#jira-datacenter-support "Direct link to Jira Datacenter Support")
+#### Jira Datacenter Support
 
 This context provider supports both Jira API version 2 and 3. It will use version 3 by default since that's what the cloud version uses, but if you have the datacenter version of Jira, you'll need to set the API Version to 2 using the `apiVersion` property.
 
@@ -672,7 +672,7 @@ config.json
 { "contextProviders": [{ "name": "jira", "params": { "apiVersion": "2" } }] }
 ```
 
-#### Issue Query[​](#issue-query "Direct link to Issue Query")
+#### Issue Query
 
 By default, the following query will be used to find issues:
 
@@ -682,11 +682,11 @@ assignee = currentUser() AND resolution = Unresolved order by updated DESC
 
 You can override this query by setting the `issueQuery` parameter.
 
-#### Max results[​](#max-results "Direct link to Max results")
+#### Max results
 
 You can set the `maxResults` parameter to limit the number of results returned. The default is `50`.
 
-### `@Discord`[​](#discord "Direct link to discord")
+### `@Discord`
 
 Reference the messages in a Discord channel.
 
@@ -721,7 +721,7 @@ config.json
 
 Make sure to include your own [Bot Token](https://discord.com/developers/applications), and join it to your related server . If you want more granular control over which channels are searched, you can specify a list of channel IDs to search in. If you don't want to specify any channels, just include the guild id(Server ID) and all channels will be included. The provider only reads text channels.
 
-### `@HTTP`[​](#http "Direct link to http")
+### `@HTTP`
 
 The HttpContextProvider makes a POST request to the url passed in the configuration. The server must return 200 OK with a ContextItem object or an array of ContextItems.
 
@@ -760,7 +760,7 @@ Response
 [  {    "name": "",    "description": "",    "content": ""  }]// OR{  "name": "",  "description": "",  "content": ""}
 ```
 
-### `@Commits`[​](#commits "Direct link to commits")
+### `@Commits`
 
 Reference specific git commit metadata and diff or all of the recent commits.
 
@@ -785,7 +785,7 @@ config.json
 
 The depth is how many commits will be loaded into the submenu, defaults to 50. The LastXCommitsDepth is how many recent commits will be included, defaults to 10.
 
-### `@Greptile`[​](#greptile "Direct link to greptile")
+### `@Greptile`
 
 Query a [Greptile](https://www.greptile.com/) index of the current repo/branch.
 
@@ -811,6 +811,6 @@ config.json
 }
 ```
 
-### Requesting Context Providers[​](#requesting-context-providers "Direct link to Requesting Context Providers")
+### Requesting Context Providers
 
 Not seeing what you want? Create an issue [here](https://github.com/continuedev/continue/issues/new?assignees=TyDunn&labels=enhancement&projects=&template=feature-request-%F0%9F%92%AA.md&title=) to request a new Context Provider.
