--- a/docs/features/agent/how-it-works.mdx
+++ b/docs/features/agent/how-it-works.mdx
@@ -3,7 +3,7 @@ title: "How Agent Works"
 description: "Agent offers the same functionality as Chat, while also including tools in the request to the model and an interface for handling tool calls and responses."
 ---
 
-## The tool handshake[​](#the-tool-handshake "Direct link to The tool handshake")
+## The tool handshake
 
 Tools provide a flexible, powerful way for models to interface with the external world. They are provided to the model as a JSON object with a name and an arguments schema. For example, a `read_file` tool with a `filepath` argument will give the model the ability to request the contents of a specific file.
 
@@ -21,7 +21,7 @@ The following handshake describes how Agent uses tools:
   request to the model.
 </Info>
 
-## Built-in tools[​](#built-in-tools "Direct link to Built-in tools")
+## Built-in tools
 
 Continue includes several built-in tools which provide the model access to IDE functionality:
 
