--- a/docs/features/chat/quick-start.mdx
+++ b/docs/features/chat/quick-start.mdx
@@ -4,9 +4,9 @@ title: "Quick Start"
 
 Chat makes it easy to ask for help from an AI without leaving your IDE. Get explanations, generate code, and iterate on solutions conversationally.
 
-## Basic Usage[​](#basic-usage "Direct link to Basic Usage")
+## Basic Usage
 
-### 1. Start a Conversation[​](#1-start-a-conversation "Direct link to 1. Start a Conversation")
+### 1. Start a Conversation
 
 Type your question or request in the chat input and press Enter.
 
@@ -16,7 +16,7 @@ Type your question or request in the chat input and press Enter.
 - "How do I handle errors in this code?"
 - "Generate a test for this component"
 
-### 2. Include Code Context[​](#2-include-code-context "Direct link to 2. Include Code Context")
+### 2. Include Code Context
 
 Select code in your editor, then use the keyboard shortcut to include it in your chat:
 
@@ -27,7 +27,7 @@ Press `Cmd/Ctrl + L` to send selected code to chat
 
 Press `Cmd/Ctrl + J` to send selected code to chat
 
-### 3. Use @ for Additional Context[​](#3-use--for-additional-context "Direct link to 3. Use @ for Additional Context")
+### 3. Use @ for Additional Context
 
 Type `@` to include specific context:
 
@@ -36,7 +36,7 @@ Type `@` to include specific context:
 - `@Files` - Reference specific files
 - `@Terminal` - Include terminal output
 
-## Working with Responses[​](#working-with-responses "Direct link to Working with Responses")
+## Working with Responses
 
 When the AI provides code in its response, you'll see action buttons:
 
@@ -44,13 +44,13 @@ When the AI provides code in its response, you'll see action buttons:
 - **Insert at cursor** - Add code at your cursor position
 - **Copy** - Copy code to clipboard
 
-## Pro Tips[​](#pro-tips "Direct link to Pro Tips")
+## Pro Tips
 
-### Start Fresh[​](#start-fresh "Direct link to Start Fresh")
+### Start Fresh
 
 Press `Cmd/Ctrl + L` (VS Code) or `Cmd/Ctrl + J` (JetBrains) in an empty chat to start a new session.
 
-### Be Specific[​](#be-specific "Direct link to Be Specific")
+### Be Specific
 
 Include details about:
 
@@ -58,7 +58,7 @@ Include details about:
 - Any constraints or requirements
 - Your preferred coding style or patterns
 
-### Iterate[​](#iterate "Direct link to Iterate")
+### Iterate
 
 If the first response isn't perfect:
 
@@ -66,21 +66,21 @@ If the first response isn't perfect:
 - Request modifications
 - Provide additional context
 
-## Common Use Cases[​](#common-use-cases "Direct link to Common Use Cases")
+## Common Use Cases
 
-### Code Explanation[​](#code-explanation "Direct link to Code Explanation")
+### Code Explanation
 
 Select confusing code and ask "What does this code do?"
 
-### Bug Fixing[​](#bug-fixing "Direct link to Bug Fixing")
+### Bug Fixing
 
 Include error messages and ask "How do I fix this error?"
 
-### Code Generation[​](#code-generation "Direct link to Code Generation")
+### Code Generation
 
 Describe what you want: "Create a React component that displays a user profile"
 
-### Refactoring[​](#refactoring "Direct link to Refactoring")
+### Refactoring
 
 Select code and ask "How can I make this more efficient?"
 
