--- a/docs/guides/llama3.1.mdx
+++ b/docs/guides/llama3.1.mdx
@@ -7,7 +7,7 @@ If you haven't already installed Continue, you can do that [here for VS Code](ht
 
 Below we share some of the easiest ways to get up and running, depending on your use-case.
 
-## Ollama[​](#ollama "Direct link to Ollama")
+## Ollama
 
 Ollama is the fastest way to get up and running with local language models. We recommend trying Llama 3.1 8b, which is impressive for its size and will perform well on most hardware.
 
@@ -34,7 +34,7 @@ config.json
 }
 ```
 
-## Groq[​](#groq "Direct link to Groq")
+## Groq
 
 <Info>
   Check if your chosen model is still supported by referring to the [model
@@ -71,7 +71,7 @@ config.json
 }
 ```
 
-## Together AI[​](#together-ai "Direct link to Together AI")
+## Together AI
 
 Together AI provides fast and reliable inference of open-source models. You'll be able to run the 405b model with good speed.
 
@@ -103,7 +103,7 @@ config.json
 }
 ```
 
-## Replicate[​](#replicate "Direct link to Replicate")
+## Replicate
 
 Replicate makes it easy to host and run open-source AI with an API.
 
@@ -134,7 +134,7 @@ config.json
 }
 ```
 
-## SambaNova[​](#sambanova "Direct link to SambaNova")
+## SambaNova
 
 SambaNova Cloud provides world record Llama3.1 70B/405B serving.
 
@@ -166,7 +166,7 @@ config.json
 }
 ```
 
-## Cerebras Inference[​](#cerebras-inference "Direct link to Cerebras Inference")
+## Cerebras Inference
 
 Cerebras Inference uses specialized silicon to provides fast inference for the Llama3.1 8B/70B.
 
