--- a/docs/hub/assistants/create-an-assistant.mdx
+++ b/docs/hub/assistants/create-an-assistant.mdx
@@ -2,7 +2,7 @@
 title: "Create an assistant"
 ---
 
-## Remix an assistant[​](#remix-an-assistant "Direct link to Remix an assistant")
+## Remix an assistant
 
 You should remix an assistant if you want to use it after some modifications.
 
@@ -17,7 +17,7 @@ Once here, you’ll be able to
 
 Clicking “Create assistant” will make this assistant available for use.
 
-## Create an assistant from scratch[​](#create-an-assistant-from-scratch "Direct link to Create an assistant from scratch")
+## Create an assistant from scratch
 
 To create an assistant from scratch, select “New assistant” in the top bar.
 
