--- a/docs/hub/blocks/bundles.mdx
+++ b/docs/hub/blocks/bundles.mdx
@@ -3,7 +3,7 @@ title: "Bundles"
 description: "Bundles are collections of blocks that are commonly used together. You can use them to add multiple building blocks to your custom AI code assistants at once. They are only a concept on , so they are not represented in ."
 ---
 
-## Use a bundle[​](#use-a-bundle "Direct link to Use a bundle")
+## Use a bundle
 
 Once you know which bundle you want to use, you’ll need to
 
@@ -14,7 +14,7 @@ Once you know which bundle you want to use, you’ll need to
 
 After this, you can then go to your IDE extension using the "Open VS Code" or "Open Jetbrains" buttons and begin using the new blocks.
 
-## Create a bundle[​](#create-a-bundle "Direct link to Create a bundle")
+## Create a bundle
 
 To create a bundle, click “New bundle” in the header.
 
@@ -28,6 +28,6 @@ Then, search blocks using the "Search blocks" input and add them to your bundle.
 
 Once you have added all the blocks you want in your bundle, click "Create Bundle" to save it and make it available for use.
 
-## Remix a bundle[​](#remix-a-bundle "Direct link to Remix a bundle")
+## Remix a bundle
 
 It is not currently possible to remix a bundle.
