--- a/docs/customization/mcp-tools.mdx
+++ b/docs/customization/mcp-tools.mdx
@@ -11,6 +11,6 @@ description: "Model Context Protocol servers provide specialized functionality:"
 
 ![MCP Blocks Overview](/images/customization/images/mcp-blocks-overview-c9a104f9b586779c156f9cf34da197c2.png)
 
-## Learn More[​](#learn-more "Direct link to Learn More")
+## Learn More
 
 Learn more in the [MCP deep dive](/customization/mcp-tools), and view [`mcpServers`](/reference#mcpservers) in the YAML Reference for more details.
