--- a/docs/customize/overview.mdx
+++ b/docs/customize/overview.mdx
@@ -3,43 +3,43 @@ title: "Overview"
 description: "Explore Continue's advanced capabilities for power users and complex development scenarios."
 ---
 
-## Context Providers[​](#context-providers "Direct link to Context Providers")
+## Context Providers
 
 Master how Continue understands your codebase with powerful context providers for code, documentation, and more.
 
 [Explore Context Providers →](/customize/custom-providers)
 
-## Context Integration[​](#context-integration "Direct link to Context Integration")
+## Context Integration
 
 Specialized context features for codebase understanding and documentation integration.
 
 [Browse Context Features →](/customization/overview#codebase-context)
 
-## Deep Dives[​](#deep-dives "Direct link to Deep Dives")
+## Deep Dives
 
 Detailed technical explanations of Continue's internal workings and advanced configuration options.
 
 [Read Deep Dives →](/customization/overview#configuration)
 
-## Model Providers[​](#model-providers "Direct link to Model Providers")
+## Model Providers
 
 Configure and optimize different AI model providers for your specific needs and infrastructure.
 
 [Configure Providers →](/customization/models#openai)
 
-## Model Roles[​](#model-roles "Direct link to Model Roles")
+## Model Roles
 
 Understand how different models can be assigned specific roles in your development workflow.
 
 [Learn Model Roles →](/customize/model-roles)
 
-## Reference[​](#reference "Direct link to Reference")
+## Reference
 
 Complete configuration reference and API documentation.
 
 [View Reference →](/reference)
 
-## Troubleshooting[​](#troubleshooting "Direct link to Troubleshooting")
+## Troubleshooting
 
 Solutions to common issues and debugging techniques.
 
