--- a/docs/features/autocomplete/how-it-works.mdx
+++ b/docs/features/autocomplete/how-it-works.mdx
@@ -3,18 +3,18 @@ title: "How Autocomplete Works"
 description: "Autocomplete is a  that uses a combination of retrieval methods and response processing techniques. The system can be understood in roughly three parts."
 ---
 
-## Timing[​](#timing "Direct link to Timing")
+## Timing
 
 In order to display suggestions quickly, without sending too many requests, we do the following:
 
 - Debouncing: If you are typing quickly, we won't make a request on each keystroke. Instead, we wait until you have finished.
 - Caching: If your cursor is in a position that we've already generated a completion for, this completion is reused. For example, if you backspace, we'll be able to immediately show the suggestion you saw before.
 
-## Context[​](#context "Direct link to Context")
+## Context
 
 Continue uses a number of retrieval methods to find relevant snippets from your codebase to include in the prompt.
 
-## Filtering[​](#filtering "Direct link to Filtering")
+## Filtering
 
 Language models aren't perfect, but can be made much closer by adjusting their output. We do extensive post-processing on responses before displaying a suggestion, including:
 
