--- a/docs/features/chat/how-it-works.mdx
+++ b/docs/features/chat/how-it-works.mdx
@@ -3,7 +3,7 @@ title: "How Chat Works"
 description: "Continue's Chat feature provides a conversational interface with AI models directly in your IDE sidebar."
 ---
 
-## Core Functionality[​](#core-functionality "Direct link to Core Functionality")
+## Core Functionality
 
 When you start a chat conversation, Continue:
 
@@ -12,22 +12,22 @@ When you start a chat conversation, Continue:
 3. **Sends to Model**: Prompts the configured AI model for a response
 4. **Streams Response**: Returns the AI response in real-time to the sidebar
 
-## Context Management[​](#context-management "Direct link to Context Management")
+## Context Management
 
-### Automatic Context[​](#automatic-context "Direct link to Automatic Context")
+### Automatic Context
 
 - Selected code in your editor
 - Current file context when relevant
 - Previous conversation history in the session
 
-### Manual Context[​](#manual-context "Direct link to Manual Context")
+### Manual Context
 
 - `@Codebase` - Search and include relevant code from your project
 - `@Docs` - Include documentation context
 - `@Files` - Reference specific files
 - Custom context providers
 
-## Response Handling[​](#response-handling "Direct link to Response Handling")
+## Response Handling
 
 Each code section in the AI response includes action buttons:
 
@@ -35,19 +35,19 @@ Each code section in the AI response includes action buttons:
 - **Insert at cursor** - Add code at cursor position
 - **Copy** - Copy code to clipboard
 
-## Session Management[​](#session-management "Direct link to Session Management")
+## Session Management
 
 - Use `Cmd/Ctrl + L` (VS Code) or `Cmd/Ctrl + J` (JetBrains) to start a new session
 - Clears all previous context for a fresh start
 - Helpful for switching between different tasks
 
-## Advanced Features[​](#advanced-features "Direct link to Advanced Features")
+## Advanced Features
 
-### Prompt Inspection[​](#prompt-inspection "Direct link to Prompt Inspection")
+### Prompt Inspection
 
 View the exact prompt sent to the AI model in the [prompt logs](/troubleshooting) for debugging and optimization.
 
-### Context Providers[​](#context-providers "Direct link to Context Providers")
+### Context Providers
 
 Learn more about how context providers work:
 
