--- a/docs/features/edit/quick-start.mdx
+++ b/docs/features/edit/quick-start.mdx
@@ -2,7 +2,7 @@
 title: "Quick Start"
 ---
 
-## How to use it[​](#how-to-use-it "Direct link to How to use it")
+## How to use it
 
 Edit is a convenient way to make quick changes to specific code and files. Select code, describe your code changes, and a diff will be streamed inline to your file which you can accept or reject.
 
@@ -12,15 +12,15 @@ Edit is recommended for small, targeted changes, such as
 - Generating unit tests
 - Refactoring functions or methods
 
-## Highlight code and activate[​](#highlight-code-and-activate "Direct link to Highlight code and activate")
+## Highlight code and activate
 
 Highlight the block of code you would like to modify and press `cmd/ctrl` + `i` to active Edit mode. You can also enter Edit mode by pressing `cmd/ctrl` + `i` with no code highlighted, which will default to editing the current file.
 
-## Describe code changes[​](#describe-code-changes "Direct link to Describe code changes")
+## Describe code changes
 
 Describe the changes you would like the model to make to your highlighted code. For edits, a good prompt should be relatively short and concise. For longer, more complex tasks, we recommend using [Chat](/features/chat/quick-start).
 
-## Accept or reject changes[​](#accept-or-reject-changes "Direct link to Accept or reject changes")
+## Accept or reject changes
 
 Proposed changes appear as inline diffs within your highlighted text.
 
@@ -30,7 +30,7 @@ You can also accept or reject all changes at once using `cmd/ctrl` + `shift` + `
 
 If you want to request a new suggestion for the same highlighted code section, you can use `cmd/ctrl` + `i` to re-prompt the model.
 
-## VS Code[​](#vs-code "Direct link to VS Code")
+## VS Code
 
 In VS Code, Edit is implemented in the extension sidebar with a similar interface to [Chat](/features/chat/how-it-works), and you can also enter Edit mode by using the Mode Selector below the main Chat input to select `Edit`.
 
@@ -38,10 +38,10 @@ In VS Code, Edit is implemented in the extension sidebar with a similar interfac
 
 You can also reject and accept diffs using the `Reject All` and `Accept All` buttons that show up in the Chat when diffs are present (see examples below).
 
-### Adding Code to Edit[​](#adding-code-to-edit "Direct link to Adding Code to Edit")
+### Adding Code to Edit
 
 Along with adding highlighted code, you can also manually add files to edit using the `Add file` combobox or by clicking the dropdown and selecting `Add all open files` to add all files that are currently open in the editor.
 
-## Jetbrains[​](#jetbrains "Direct link to Jetbrains")
+## Jetbrains
 
 In Jetbrains, Edit is implemented as an inline popup. See the header GIF example.
