--- a/docs/guides/custom-code-rag.mdx
+++ b/docs/guides/custom-code-rag.mdx
@@ -3,17 +3,17 @@ title: "Custom code RAG"
 description: "While Continue comes with  out of the box, you might wish to set up your own vector database and build a custom retrieval-augmented generation (RAG) system. This can allow you to access code that is not available locally, to index code a single time across all users, or to include custom logic. In this guide, we'll walk you through the steps it takes to build this."
 ---
 
-## Step 1: Choose an embeddings model[​](#step-1-choose-an-embeddings-model "Direct link to Step 1: Choose an embeddings model")
+## Step 1: Choose an embeddings model
 
 If possible, we recommend using [`voyage-code-3`](https://docs.voyageai.com/docs/embeddings), which will give the most accurate answers of any existing embeddings model for code. You can obtain an API key [here](https://dash.voyageai.com/api-keys). Because their API is [OpenAI-compatible](https://docs.voyageai.com/reference/embeddings-api), you can use any OpenAI client by swapping out the URL.
 
-## Step 2: Choose a vector database[​](#step-2-choose-a-vector-database "Direct link to Step 2: Choose a vector database")
+## Step 2: Choose a vector database
 
 There are a number of available vector databases, but because most vector databases will be able to performantly handle large codebases, we would recommend choosing one for ease of setup and experimentation.
 
 [LanceDB](https://lancedb.github.io/lancedb/basic/) is a good choice for this because it can run in-memory with libraries for both Python and Node.js. This means that in the beginning you can focus on writing code rather than setting up infrastructure. If you have already chosen a vector database, then using this instead of LanceDB is also a fine choice.
 
-## Step 3: Choose a "chunking" strategy[​](#step-3-choose-a-chunking-strategy 'Direct link to Step 3: Choose a "chunking" strategy')
+## Step 3: Choose a "chunking" strategy
 
 Most embeddings models can only handle a limited amount of text at once. To get around this, we "chunk" our code into smaller pieces.
 
@@ -25,7 +25,7 @@ If you use `voyage-code-3`, it has a maximum context length of 16,000 tokens, wh
 
 As usual in this guide, we recommend starting with the strategy that gives 80% of the benefit with 20% of the effort.
 
-## Step 4: Put together an indexing script[​](#step-4-put-together-an-indexing-script "Direct link to Step 4: Put together an indexing script")
+## Step 4: Put together an indexing script
 
 Indexing, in which we will insert your code into the vector database in a retrievable format, happens in three steps:
 
@@ -48,7 +48,7 @@ from lancedb.pydantic import LanceModel, Vectorfrom lancedb.embeddings import ge
 
 Regardless of which database or model you have chosen, your script should iterate over all of the files that you wish to index, chunk them, generate embeddings for each chunk, and then insert all of the chunks into your vector database.
 
-## Step 5: Run your indexing script[​](#step-5-run-your-indexing-script "Direct link to Step 5: Run your indexing script")
+## Step 5: Run your indexing script
 
 <Check>
   In a perfect production version, you would want to build "automatic, incremental indexing", so that you whenever a file changes, that file and nothing else is automatically re-indexed. This has the benefits of perfectly up-to-date embeddings and lower cost.
@@ -61,7 +61,7 @@ At this point, you've written your indexing script and tested that you can make 
 
 In the beginning, you should probably run it by hand. Once you are confident that your custom RAG is providing value and is ready for the long-term, then you can set up a cron job to run it periodically. Because codebases are largely unchanged in short time frames, you won't want to re-index more than once a day. Once per week or month is probably even sufficient.
 
-## Step 6: Set up your server[​](#step-6-set-up-your-server "Direct link to Step 6: Set up your server")
+## Step 6: Set up your server
 
 In order for the Continue extension to access your custom RAG system, you'll need to set up a server. This server is responsible for recieving a query from the extension, querying the vector database, and returning the results in the format expected by Continue.
 
@@ -100,7 +100,7 @@ config.json
 }
 ```
 
-## Step 7 (Bonus): Set up reranking[​](#step-7-bonus-set-up-reranking "Direct link to Step 7 (Bonus): Set up reranking")
+## Step 7 (Bonus): Set up reranking
 
 If you'd like to improve the quality of your results, a great first step is to add reranking. This involves retrieving a larger initial pool of results from the vector database, and then using a reranking model to order them from most to least relevant. This works because the reranking model can perform a slightly more expensive calculation on the small set of top results, and so can give a more accurate ordering than similarity search, which has to search over all entries in the database.
 
