--- a/docs/guides/overview.mdx
+++ b/docs/guides/overview.mdx
@@ -2,7 +2,7 @@
 title: "Overview"
 ---
 
-## Model & Setup Guides[​](#model--setup-guides "Direct link to Model & Setup Guides")
+## Model & Setup Guides
 
 - [Using Ollama with Continue](/guides/ollama-guide) - Local AI development with Ollama
 - [Setting up Codestral](/guides/set-up-codestral) - Configure Mistral's Codestral model
@@ -10,11 +10,11 @@ title: "Overview"
 - [Running Continue Without Internet](/guides/running-continue-without-internet) - Offline development setup
 - [Llama 3.1 Setup](/guides/llama3.1) - Getting started with Llama 3.1
 
-## Advanced Tutorials[​](#advanced-tutorials "Direct link to Advanced Tutorials")
+## Advanced Tutorials
 
 - [Build Your Own Context Provider](/guides/build-your-own-context-provider) - Create custom context providers
 - [Custom Code RAG](/guides/custom-code-rag) - Implement custom retrieval-augmented generation
 
-## Contributing[​](#contributing "Direct link to Contributing")
+## Contributing
 
 Have a guide idea or found an issue? We welcome contributions! Check our [GitHub repository](https://github.com/continuedev/continue) to get involved.
