--- a/docs/hub/sharing.mdx
+++ b/docs/hub/sharing.mdx
@@ -3,25 +3,25 @@ title: "Sharing"
 description: "Connect with the Continue community to discover, share, and collaborate on AI development tools."
 ---
 
-## Community[​](#community "Direct link to Community")
+## Community
 
 Join thousands of developers using Continue. Share experiences, get help, and contribute to the ecosystem.
 
 [Join our Discord Community →](https://discord.gg/continue)
 
-## Publishing[​](#publishing "Direct link to Publishing")
+## Publishing
 
 Share your custom assistants, blocks, and configurations with the Continue community.
 
 [Visit the Hub →](https://hub.continue.dev)
 
-## Browse Assistants[​](#browse-assistants "Direct link to Browse Assistants")
+## Browse Assistants
 
 Explore assistants created by the community for specific use cases and workflows.
 
 [Browse Assistants →](https://hub.continue.dev)
 
-## Using Assistants[​](#using-assistants "Direct link to Using Assistants")
+## Using Assistants
 
 Learn how to discover, install, and use community-created assistants in your projects.
 
