--- a/docs/reference/json-reference.mdx
+++ b/docs/reference/json-reference.mdx
@@ -12,7 +12,7 @@ Below are details for each property that can be set in `config.json`. The config
 
 **All properties at all levels are optional unless explicitly marked required**
 
-### `models`[​](#models "Direct link to models")
+### `models`
 
 Your **chat** models are defined here, which are used for [Chat](/features/chat/how-it-works), [Edit](/features/edit/how-it-works) and [VS Code actions](/customization/overview#vscode-actions).
 
@@ -79,7 +79,7 @@ config.json
 }
 ```
 
-### `tabAutocompleteModel`[​](#tabautocompletemodel "Direct link to tabautocompletemodel")
+### `tabAutocompleteModel`
 
 Specifies the model or models for tab autocompletion, defaulting to an Ollama instance. This property uses the same format as `models`. Can be an array of models or an object for one model.
 
@@ -97,7 +97,7 @@ config.json
 }
 ```
 
-### `tabAutocompleteOptions`[​](#tabautocompleteoptions "Direct link to tabautocompleteoptions")
+### `tabAutocompleteOptions`
 
 Specifies options for tab autocompletion behavior.
 
@@ -125,7 +125,7 @@ config.json
 }
 ```
 
-### `embeddingsProvider`[​](#embeddingsprovider "Direct link to embeddingsprovider")
+### `embeddingsProvider`
 
 Embeddings model settings - the model used for @Codebase and @docs.
 
@@ -160,7 +160,7 @@ config.json
 }
 ```
 
-### `completionOptions`[​](#completionoptions "Direct link to completionoptions")
+### `completionOptions`
 
 Parameters that control the behavior of text generation and completion settings. Top-level `completionOptions` apply to all models, _unless overridden at the model level_.
 
@@ -190,7 +190,7 @@ config.json
 { "completionOptions": { "stream": false, "temperature": 0.5 } }
 ```
 
-### `requestOptions`[​](#requestoptions "Direct link to requestoptions")
+### `requestOptions`
 
 Default HTTP request options that apply to all models and context providers, unless overridden at the model level.
 
@@ -223,7 +223,7 @@ config.json
 { "requestOptions": { "headers": { "X-Auth-Token": "xxx" } } }
 ```
 
-### `reranker`[​](#reranker "Direct link to reranker")
+### `reranker`
 
 Configuration for the reranker model used in response ranking.
 
@@ -249,7 +249,7 @@ config.json
 }
 ```
 
-### `docs`[​](#docs "Direct link to docs")
+### `docs`
 
 List of documentation sites to index.
 
@@ -270,7 +270,7 @@ config.json
 "docs": [    {    "title": "Continue",    "startUrl": "https://docs.continue.dev/intro",    "faviconUrl": "https://docs.continue.dev/favicon.ico",  }]
 ```
 
-### `slashCommands`[​](#slashcommands "Direct link to slashcommands")
+### `slashCommands`
 
 Custom commands initiated by typing "/" in the sidebar. Commands include predefined functionality or may be user-defined.
 
@@ -283,7 +283,7 @@ Custom commands initiated by typing "/" in the sidebar. Commands include predefi
 
 The following commands are built-in and can be added to `config.json` to make them visible:
 
-#### `/share`[​](#share "Direct link to share")
+#### `/share`
 
 Generate a shareable markdown transcript of your current chat history.
 
@@ -303,7 +303,7 @@ config.json
 
 Use the `outputDir` parameter to specify where you want to the markdown file to be saved.
 
-#### `/cmd`[​](#cmd "Direct link to cmd")
+#### `/cmd`
 
 Generate a shell command from natural language and (only in VS Code) automatically paste it into the terminal.
 
@@ -317,7 +317,7 @@ config.json
 }
 ```
 
-#### `/commit`[​](#commit "Direct link to commit")
+#### `/commit`
 
 Shows the LLM your current git diff and asks it to generate a commit message.
 
@@ -334,7 +334,7 @@ config.json
 }
 ```
 
-#### `/http`[​](#http "Direct link to http")
+#### `/http`
 
 Write a custom slash command at your own HTTP endpoint. Set 'url' in the params object for the endpoint you have setup. The endpoint should return a sequence of string updates, which will be streamed to the Continue sidebar. See our basic [FastAPI example](https://github.com/continuedev/continue/blob/74002369a5e435735b83278fb965e004ae38a97d/core/context/providers/context_provider_server.py#L34-L45) for reference.
 
@@ -352,7 +352,7 @@ config.json
 }
 ```
 
-#### `/issue`[​](#issue "Direct link to issue")
+#### `/issue`
 
 Describe the issue you'd like to generate, and Continue will turn into a well-formatted title and body, then give you a link to the draft so you can submit. Make sure to set the URL of the repository you want to generate issues for.
 
@@ -370,7 +370,7 @@ config.json
 }
 ```
 
-#### `/onboard`[​](#onboard "Direct link to onboard")
+#### `/onboard`
 
 The onboard slash command helps to familiarize yourself with a new project by analyzing the project structure, READMEs, and dependency files. It identifies key folders, explains their purpose, and highlights popular packages used. Additionally, it offers insights into the project's architecture.
 
@@ -401,7 +401,7 @@ config.json
 }
 ```
 
-### `customCommands`[​](#customcommands "Direct link to customcommands")
+### `customCommands`
 
 User-defined commands for prompt shortcuts in the sidebar, allowing quick access to common actions.
 
@@ -427,7 +427,7 @@ config.json
 }
 ```
 
-### `contextProviders`[​](#contextproviders "Direct link to contextproviders")
+### `contextProviders`
 
 List of the pre-defined context providers that will show up as options while typing in the chat, and their customization with `params`.
 
@@ -451,15 +451,15 @@ config.json
 }
 ```
 
-### `userToken`[​](#usertoken "Direct link to usertoken")
+### `userToken`
 
 An optional token that identifies the user, primarily for authenticated services.
 
-### `systemMessage`[​](#systemmessage "Direct link to systemmessage")
+### `systemMessage`
 
 Defines a system message that appears before every response from the language model, providing guidance or context.
 
-### `experimental`[​](#experimental "Direct link to experimental")
+### `experimental`
 
 Several experimental config parameters are available, as described below:
 
@@ -516,7 +516,7 @@ config.json
 }
 ```
 
-### Fully deprecated settings[​](#fully-deprecated-settings "Direct link to Fully deprecated settings")
+### Fully deprecated settings
 
 Some deprecated `config.json` settings are no longer stored in config and have been moved to be editable through the [User Settings Page](/customize/settings). If found in `config.json`, they will be auto-migrated to User Settings and removed from `config.json`.
 
